--- a/1-C-SCALE_Data Discovery.ipynb
+++ b/1-C-SCALE_Data Discovery.ipynb
@@ -471,11 +471,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "697ea29f-4ffe-4a56-ac1e-a0269b111dce",
+   "id": "50cf8825-6b64-4534-bbe0-a2c91aadaf17",
    "metadata": {},
    "outputs": [],
    "source": [
-    "items_VITO[17]"
+    "import ipywidgets as widgets\n",
+    "\n",
+    "df = geopandas.GeoDataFrame.from_features(items_VITO)\n",
+    "p = widgets.Dropdown(\n",
+    "    options= df.datetime,\n",
+    "    description='Date:',\n",
+    ")\n",
+    "display(p)"
    ]
   },
   {
@@ -493,7 +500,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"Look at this item in the STAC Browser: https://radiantearth.github.io/stac-browser/#/external/{items_VITO[17].get_self_href()}\")"
+    "print(f\"Look at this item in the STAC Browser:https://radiantearth.github.io/stac-browser/#/external/{items_VITO[df.datetime.index[df.datetime.tolist().index(p.value)]].get_self_href()}\")"
    ]
   },
   {
@@ -772,12 +779,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e71c3b8-2918-4499-983f-3342c99d88e6",
+   "id": "ce478cc7-1257-40b7-9f6e-14dbf725d2c6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(0, len(items_cloud)):\n",
-    "    print(items_cloud[i].datetime)"
+    "import ipywidgets as widgets\n",
+    "\n",
+    "item_gpd = geopandas.GeoDataFrame.from_features(items_cloud)\n",
+    "p = widgets.Dropdown(\n",
+    "    options= item_gpd.datetime,\n",
+    "    description='Date:',\n",
+    ")\n",
+    "display(p)"
    ]
   },
   {
@@ -796,7 +809,7 @@
    "outputs": [],
    "source": [
     "item_gpd = geopandas.GeoDataFrame.from_features(items_cloud)\n",
-    "item_choose = item_gpd[1:2]\n",
+    "item_choose = item_gpd[item_gpd.datetime.index[item_gpd.datetime.tolist().index(p.value)]:item_gpd.datetime.index[item_gpd.datetime.tolist().index(p.value)]+1]\n",
     "world = geopandas.read_file(geopandas.datasets.get_path('naturalearth_lowres'))\n",
     "ax = world.plot(color='white', edgecolor='black')\n",
     "aoi_eu_wgs84.plot(ax=ax, edgecolor='red', facecolor=\"red\", alpha=0.5, linewidth=1)\n",
@@ -821,7 +834,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"Look at this item in the STAC Browser: https://radiantearth.github.io/stac-browser/#/external/{items_cloud[1].get_self_href()}\")"
+    "print(f\"Look at this item in the STAC Browser: https://radiantearth.github.io/stac-browser/#/external/{items_cloud[item_gpd.datetime.index[item_gpd.datetime.tolist().index(p.value)]].get_self_href()}\")"
    ]
   },
   {
@@ -910,28 +923,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11fafb12-5ad5-47a5-ad09-0a5d5a623e43",
-   "metadata": {},
-   "source": [
-    "We can see the satelite image tile with its original size and quality but it takes roughly 4 min!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f10b6fd-b6de-4010-8b90-808336934f3a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "import rasterio\n",
-    "from rasterio.plot import show\n",
-    "tci = rasterio.open(img_folder + img_name, driver='JP2OpenJPEG');\n",
-    "show(tci)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "978aeece-103f-4434-ba3b-6f4fbccbc4a9",
    "metadata": {},
    "source": [
@@ -970,6 +961,29 @@
     "    img = requests.get(url, headers={\"authorization\": \"Bearer {}\".format(open('/var/run/secrets/egi.eu/access_token').read())}, stream=False)\n",
     "    with open(img_folder + band +'.jp2', 'wb') as f:\n",
     "        f.write(img.content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11fafb12-5ad5-47a5-ad09-0a5d5a623e43",
+   "metadata": {},
+   "source": [
+    "We can see the satelite image tile with its original size and quality but it takes roughly 4 min!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f10b6fd-b6de-4010-8b90-808336934f3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "import rasterio\n",
+    "from rasterio.plot import show\n",
+    "\n",
+    "tci = rasterio.open(img_folder + img_name, driver='JP2OpenJPEG');\n",
+    "show(tci)"
    ]
   },
   {
