--- a/1-C-SCALE_Data Discovery.ipynb
+++ b/1-C-SCALE_Data Discovery.ipynb
@@ -641,28 +641,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cb378bf-9cf2-4c0d-a76f-ab7763b30855",
-   "metadata": {},
-   "source": [
-    "Lets check how many items we have:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6b32b8bc-6dba-4048-a859-4b2d77584090",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f\"{len(items_s2)} matching items was found.\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "7b79af62-c3c8-4abe-b59a-dc3db4974824",
    "metadata": {},
    "source": [
-    "We can plot some parameters that are stored within these collection, e.g. cloud coverage over the area."
+    "We can plot some parameters that are stored within these collection, e.g. cloud coverage over the selected area."
    ]
   },
   {
@@ -683,35 +665,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2dd0ab6c-5084-4e8b-a7ea-7626f826b71f",
+   "metadata": {},
+   "source": [
+    "We can see the results just directly printed:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d12246db-a3b2-4cfe-b72c-c04d84c3ce61",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cloud_dict[\"CollGS_CZ|sentinel-2-l1c-2023\"]"
+    "print(cloud_dict[\"CollGS_CZ|sentinel-2-l1c-2023\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04573ed5-b5ff-4218-850b-9d2e2faf3cdb",
+   "metadata": {},
+   "source": [
+    "We can plot the search results which is more convenient. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5206b0c4-41e3-47ca-ae16-d12425b23d0a",
-   "metadata": {},
+   "id": "8514bf91-6c82-447f-9ec1-41bd8a43494a",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "import matplotlib.dates as mdates\n",
-    "\n",
-    "plotype = \"line\"\n",
     "title = 'S2 Cloud Cover - Prague Region 2022'\n",
-    "yaxis = 'eo:cloud-cover [%]'\n",
     "\n",
-    "fig, axes = plt.subplots(nrows=1, ncols=3, figsize=(18,6))\n",
-    "\n",
-    "for i, item in enumerate(cloud_dict):\n",
-    "    cloud_dict[item].plot(ax=axes[i],                          \n",
-    "                          kind=plotype,\n",
-    "                          ylabel= yaxis,\n",
-    "                          title= title + '\\n' + f\" {item}\")"
+    "for i, item in enumerate(gpd):\n",
+    "    fig = px.bar(gpd[item], x=\"datetime\", y=\"eo:cloud_cover\", title= title + ' [' + item + ']',\n",
+    "                labels={\"datetime\": \"Date\",\n",
+    "                     \"eo:cloud_cover\": \"Cloud coverage [%]\"})\n",
+    "    fig.show()"
    ]
   },
   {
@@ -719,7 +713,7 @@
    "id": "e39b8258-bede-4ca4-bd8f-f0107c5746b3",
    "metadata": {},
    "source": [
-    "Lets now focus on downloading particular region of interest with zero cloud coverage."
+    "Lets now focus on downloading particular region of interest with almost zero cloud coverage."
    ]
   },
   {
