geojson upload and notebooks update

--- a/1-C-SCALE_Data Discovery.ipynb
+++ b/1-C-SCALE_Data Discovery.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "0cfbc6e6-e1d8-4d8b-9949-ecbfa3c0434f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Discovering and processing Earth Observation Data with the EO-MQS"
    ]
@@ -13,7 +15,7 @@
    "id": "4d90e1f7-ea55-4945-9ac9-d70425dc8002",
    "metadata": {},
    "source": [
-    "The EO-MQS service is hosted within the C-SCALE federated cloud infrastructure and provides a unified way of discovering Copernicus data available within the federation by making use of the SpatioTemporal Asset Catalog (STAC) specification. The purpose of this notebook is to prvovide a concise introduction on how to use open-source Python libraries to search for geospatial data exposed by the EO-MQS STAC API."
+    "The EO-MQS service is hosted within the C-SCALE federated cloud infrastructure and provides a unified way of discovering Copernicus data available within the federation by making use of the SpatioTemporal Asset Catalog (STAC) specification. The purpose of this notebook is to provide a concise introduction on how to use open-source Python libraries to search for geospatial data exposed by the EO-MQS STAC API."
    ]
   },
   {
@@ -28,7 +30,7 @@
     "\n",
     "To get started, we need to import the `Client` class to connect to the EO-MQS which exposes its STAC API under `https://mqs.eodc.eu/stac/v1`.\n",
     "\n",
-    "We need to import Python libraries and soem useful functions as well."
+    "We need to import Python libraries and some useful functions as well."
    ]
   },
   {
@@ -38,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install pystac-client"
+    "pip install pystac-client==0.6.0"
    ]
   },
   {
@@ -135,7 +137,7 @@
    "id": "52228dbf-c4b9-4cfd-858f-92632ab3476d",
    "metadata": {},
    "source": [
-    "On static as well as dynamic catalogues we can also make use of the `links` attributes which lets us quickly examinate, for instance, the number of available collections."
+    "On static as well as dynamic catalogues we can also make use of the `links` attributes which lets us quickly explore, for instance, the number of available collections."
    ]
   },
   {
@@ -165,7 +167,7 @@
    "outputs": [],
    "source": [
     "collection = client.get_collection(\"CollGS_CZ|sentinel-2-l1c-2023\")\n",
-    "#collection = client.get_collection(\"sentinel-2-l1c\")\n",
+    "#collection = client.get_collection(\"EODC|sentinel-2-l1c\")\n",
     "collection"
    ]
   },
@@ -174,7 +176,7 @@
    "id": "6c39dd15-2b4d-4d0e-99b1-ec59fa44c8e2",
    "metadata": {},
    "source": [
-    "There are ways how to access useful collection metadata programmatically - one of the useful one is bellow: "
+    "We can use of some useful ways how to access collection metadata programmatically. "
    ]
   },
   {
@@ -194,7 +196,7 @@
    "source": [
     "## STAC Items\n",
     "\n",
-    "Simlarly to before, we can use the collection client instance to iterate over the items contained in the collection. The server must provide the `/collections/<collection_id>/items` endpoint to support this feature automatically. This can be useful to manually filter items or extract information programmatically. The `get_all_items()` method again returns an iterator."
+    "As before, we can use the collection client instance to iterate over the items contained in the collection. The server must provide the `/collections/<collection_id>/items` endpoint to support this feature automatically. This can be useful to manually filter items or extract information programmatically. The `get_all_items()` method again returns an iterator."
    ]
   },
   {
@@ -202,14 +204,8 @@
    "id": "ac2a7b15-089a-4c49-baee-68929f412a4f",
    "metadata": {},
    "source": [
-    "## Visualize Sentinel-2 data over EU"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "887ad5f7-e682-4984-8ad8-8517c638147c",
-   "metadata": {},
-   "source": [
+    "## Visualize Sentinel-2 data over EU\n",
+    "\n",
     "We can use the geojson file created using [geojson.io](https://geojson.io)."
    ]
   },
@@ -244,10 +240,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cf25e24-40dc-4d0e-b0b1-d5c6f9653502",
+   "id": "71ea0081-2022-4f95-b881-9963d40cad27",
    "metadata": {},
    "source": [
-    "We can search for the collections that contains satelite images of EU region."
+    "First, we will search for Sentinel-2 data."
    ]
   },
   {
@@ -269,7 +265,7 @@
    "id": "127cd5cd-402e-4a41-8e27-7768a37772e1",
    "metadata": {},
    "source": [
-    "We can check for each collection the time interval. "
+    "We can check time interval of each collection. "
    ]
   },
   {
@@ -285,6 +281,14 @@
     "for i in range(0,len(s2_collections)):\n",
     "    collections_item = client.get_collection(s2_collections[i])\n",
     "    print(f\"{collections_item.id} collection contains data in the following temporal inteval: {collections_item.extent.temporal.to_dict()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cf25e24-40dc-4d0e-b0b1-d5c6f9653502",
+   "metadata": {},
+   "source": [
+    "We can search for the collections that contain satellite images of EU region."
    ]
   },
   {
@@ -331,6 +335,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c10346f0-7acc-4cc1-9dc3-617e4527737f",
+   "metadata": {},
+   "source": [
+    "Color coded Sentinel-2 collections."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2b1230b3-cc90-4879-8bb7-8962867edc7a",
@@ -371,7 +383,7 @@
     "\n",
     "Data providers that have realized their STAC implementation in terms of a dynamic STAC API offer users the opportunity to search their Catalogs using spatial and temporal constraints. The `pystac_client` enables this search via the class method `search`. This function returns an ItemSearch instance that can further be accessed to retrieve matched items.\n",
     "\n",
-    "Note that in its current implementation, the EO-MQS supports the *core* STAC search endpoint paramters as described in the [STAC API - Item Search](https://github.com/radiantearth/stac-api-spec/tree/master/item-search#query-parameter-table) specification. Those are:\n",
+    "Note that in its current implementation, the EO-MQS supports the *core* STAC search endpoint parameters as described in the [STAC API - Item Search](https://github.com/radiantearth/stac-api-spec/tree/master/item-search#query-parameter-table) specification. Those are:\n",
     "- limit\n",
     "- bbox\n",
     "- datetime\n",
@@ -510,8 +522,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url=items_VITO[17].assets['QUICKLOOK'].href\n",
-    "url"
+    "url=items_VITO[df.datetime.index[df.datetime.tolist().index(p.value)]].assets['QUICKLOOK'].href"
    ]
   },
   {
@@ -519,7 +530,7 @@
    "id": "14379ad6-2dbf-49a3-857b-f32f5911761a",
    "metadata": {},
    "source": [
-    "We can downlad a preview image of the satelite image"
+    "We can download a preview image of the satellite image"
    ]
   },
   {
@@ -570,14 +581,8 @@
    "source": [
     "### Search for Sentinel-2 data using bbox \n",
     "\n",
-    "This first example makes use of the `bbox`, `datetime` and the `collections` parameters. Learn about the correct formatting of these values on the STAC Spec GitHub page or by looking at the [pystac-client docs](https://pystac-client.readthedocs.io/en/latest/api.html#item-search)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "56af1eba-ce82-4681-a86b-3b8183984c28",
-   "metadata": {},
-   "source": [
+    "This first example makes use of the `bbox`, `datetime` and the `collections` parameters. Learn about the correct formatting of these values on the STAC Spec GitHub page or by looking at the [pystac-client docs](https://pystac-client.readthedocs.io/en/latest/api.html#item-search).\n",
+    "\n",
     "This time we will convert geojson file into bbox coordinates."
    ]
   },
@@ -644,7 +649,7 @@
    "id": "7b79af62-c3c8-4abe-b59a-dc3db4974824",
    "metadata": {},
    "source": [
-    "We can plot some parameters that are stored within these collection, e.g. cloud coverage over the selected area."
+    "We can plot some parameters that are stored within these collections, e.g. cloud coverage over the selected area."
    ]
   },
   {
@@ -669,7 +674,7 @@
    "id": "2dd0ab6c-5084-4e8b-a7ea-7626f826b71f",
    "metadata": {},
    "source": [
-    "We can see the results just directly printed:"
+    "We can see the results just directly printed."
    ]
   },
   {
@@ -699,6 +704,7 @@
    },
    "outputs": [],
    "source": [
+    "import plotly.express as px\n",
     "title = 'S2 Cloud Cover - Prague Region 2022'\n",
     "\n",
     "for i, item in enumerate(gpd):\n",
@@ -713,7 +719,7 @@
    "id": "e39b8258-bede-4ca4-bd8f-f0107c5746b3",
    "metadata": {},
    "source": [
-    "Lets now focus on downloading particular region of interest with almost zero cloud coverage."
+    "Let's now focus on downloading particular region of interest with almost zero cloud coverage."
    ]
   },
   {
@@ -743,7 +749,7 @@
    "id": "50ae16e3-6ce6-4a61-b4f6-01d043825984",
    "metadata": {},
    "source": [
-    "Now lets find the lowest cloud coverage in the collection of the desired region of interest."
+    "Find the lowest cloud coverage in the collection of the desired region of interest."
    ]
   },
   {
@@ -753,7 +759,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load 10 items with cloud cover less than 10%\n",
+    "# Load items with cloud cover less than 1%\n",
     "items_cloud = []\n",
     "for n, item in enumerate(items_CollGS_CZ):\n",
     "    cloud_cover = item.properties.get(\"eo:cloud_cover\")\n",
@@ -767,7 +773,7 @@
    "id": "fa01d7f4-0295-4308-84d1-73c078ad35c3",
    "metadata": {},
    "source": [
-    "Lets see what days are cloudless."
+    "We can find dates of cloudless days."
    ]
   },
   {
@@ -792,7 +798,7 @@
    "id": "46b42ba2-d748-4865-9b8c-3940cc94ecc8",
    "metadata": {},
    "source": [
-    "We can choose exact day we would like to download and visualize this particular satelite tile in the map and check its geographical position as well as the shape."
+    "We can choose exact day we would like to download and visualize this particular satellite tile in the map and check its geographical position as well as the shape."
    ]
   },
   {
@@ -818,7 +824,7 @@
    "id": "eb47b84f-05e6-4388-961d-a6812486ee29",
    "metadata": {},
    "source": [
-    "We can check the metadat in the browser."
+    "We can check the metadata in the browser."
    ]
   },
   {
@@ -836,7 +842,7 @@
    "id": "195fac4a-e4ff-4c8f-b04b-2b94696513f6",
    "metadata": {},
    "source": [
-    "For downloading the data we need the URL and ACCESS TOKEN, which is ready in the notebook since logon. We can load it and check user info."
+    "For downloading data, we need the URL and ACCESS TOKEN, which is ready in the notebook since logon. We can load it and check user info."
    ]
   },
   {
@@ -856,7 +862,7 @@
    "id": "8d5cc3cc-c8b7-40fc-9625-977c2d1cdb8f",
    "metadata": {},
    "source": [
-    "We can check attributes. For convenience and to maintain privacy we will filter for those relevant to C-SCALE"
+    "We can check attributes. For convenience and to maintain privacy we will filter for those relevant to C-SCALE."
    ]
   },
   {
@@ -884,7 +890,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TCI = requests.get(items_cloud[1].assets[\"visual\"].href, headers={\"authorization\": \"Bearer {}\".format(open('/var/run/secrets/egi.eu/access_token').read())}, stream=False)"
+    "TCI = requests.get(items_cloud[item_gpd.datetime.tolist().index(p.value)].assets[\"visual\"].href, headers={\"authorization\": \"Bearer {}\".format(open('/var/run/secrets/egi.eu/access_token').read())}, stream=False)"
    ]
   },
   {
@@ -951,7 +957,7 @@
    "source": [
     "# Saving the list of bands\n",
     "for band in band_list:\n",
-    "    url=items_cloud[1].assets[band].href\n",
+    "    url=items_cloud[item_gpd.datetime.tolist().index(p.value)].assets[band].href\n",
     "    img = requests.get(url, headers={\"authorization\": \"Bearer {}\".format(open('/var/run/secrets/egi.eu/access_token').read())}, stream=False)\n",
     "    with open(img_folder + band +'.jp2', 'wb') as f:\n",
     "        f.write(img.content)"
@@ -962,7 +968,7 @@
    "id": "11fafb12-5ad5-47a5-ad09-0a5d5a623e43",
    "metadata": {},
    "source": [
-    "We can see the satelite image tile with its original size and quality but it takes roughly 4 min!"
+    "We can see the satellite image tile with its original size and quality but it takes roughly 4 min!"
    ]
   },
   {
