all notebooks update

--- a/2-C-SCALE_Image_Processing.ipynb
+++ b/2-C-SCALE_Image_Processing.ipynb
@@ -25,19 +25,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from IPython.display import Markdown\n",
     "import rasterio\n",
     "import rasterio.plot as plot\n",
     "from rasterio.plot import show\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1511dda7-c127-4ed0-bcc9-7ef8bb185437",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import os\n",
+    "\n",
     "path = os.path.abspath(\"\")\n",
     "path"
    ]
@@ -53,23 +46,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d0196b6-e274-44ce-a213-9b846a58f6fb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img_folder = path + '/images/jp2/'\n",
-    "img_folder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "d448a3bc-ee24-4201-b4f9-bebc8ce9524f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_name = \"TCI.jp2\"\n",
-    "tci = rasterio.open(img_folder + img_name, driver='JP2OpenJPEG');"
+    "img_folder = path + '/images/jp2/' \n",
+    "\n",
+    "try:\n",
+    "    # Attempt to access the folder\n",
+    "    os.listdir(img_folder)\n",
+    "    img_name = \"TCI.jp2\"\n",
+    "    tci = rasterio.open(img_folder + img_name, driver='JP2OpenJPEG')\n",
+    "\n",
+    "except FileNotFoundError:\n",
+    "    error_message = f\"**Error:** The folder '{img_folder}' does not exist. Please create the folder or provide a valid path.\"\n",
+    "    display(Markdown(f\"<font color='red'>{error_message}</font>\"))\n",
+    "\n",
+    "except Exception as e:\n",
+    "    # Handle other potential exceptions\n",
+    "    print(f\"An error occurred: {e}\")"
    ]
   },
   {
@@ -89,9 +84,9 @@
    },
    "outputs": [],
    "source": [
-    "%%time\n",
+    "#%%time\n",
     "# This takes quite a long time to execute\n",
-    "show(tci)"
+    "#show(tci)"
    ]
   },
   {
@@ -114,36 +109,38 @@
    "outputs": [],
    "source": [
     "import folium\n",
+    "import pandas as pd\n",
     "from rasterio import warp\n",
-    "from use_functions import reverse_coordinates, to_index, generate_polygon, pol_to_np, pol_to_bounding_box"
+    "from cscale_notebooks_functions import reverse_coordinates, to_index, generate_polygon, pol_to_np, pol_to_bounding_box"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1863091b-1090-405c-b931-06a8421efd7f",
+   "id": "e5b53fa0-2497-41f1-931d-80308795b270",
    "metadata": {},
    "outputs": [],
    "source": [
     "# original bounds of the image\n",
     "bounds_trans_original = warp.transform_bounds(tci.crs,{'init': 'epsg:4326'},\n",
     "                                              *tci.bounds)\n",
-    "polygon_trans_original = generate_polygon(bounds_trans_original)\n",
     "\n",
-    "polyline_polygon_trans_original = folium.PolyLine(reverse_coordinates(polygon_trans_original),\n",
+    "coordinates_file = 'single_polygon_coords.csv'\n",
+    "try:\n",
+    "    # Read the CSV file with original coordinates into a DataFrame\n",
+    "    df = pd.read_csv(coordinates_file)\n",
+    "    \n",
+    "    # Combine X and Y columns into a list of lists\n",
+    "    coordinates_list = list(df[['X', 'Y']].values.tolist())\n",
+    "\n",
+    "except FileNotFoundError:\n",
+    "    print(f\"The file '{coordinates_file}' with image coordinates was not found. The coordinates from TCI image have been used instead.\")\n",
+    "    coordinates_list = generate_polygon(bounds_trans_original)\n",
+    "\n",
+    "polyline_polygon_trans_original = folium.PolyLine(reverse_coordinates(coordinates_list),\n",
     "                                                  popup=\"polygon_trans_original\",\n",
-    "                                                  color=\"green\")#\"#2ca02c\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a81aaf15-6176-4f45-abc7-d2ec9f9707cc",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "                                                  color=\"green\")#\"#2ca02c\")\n",
+    "\n",
     "mean_lat = (bounds_trans_original[1] + bounds_trans_original[3]) / 2.0\n",
     "mean_lng = (bounds_trans_original[0] + bounds_trans_original[2]) / 2.0\n",
     "map_bb = folium.Map(location=[mean_lat-0.2,mean_lng+1.5], zoom_start=8)\n",
@@ -156,7 +153,7 @@
    "id": "a7484761-7dd2-46ce-bbef-f29bbd58bfc7",
    "metadata": {},
    "source": [
-    "We can now create our region of interest. Region of interested was created with [geojson.io](https://geojson.io)."
+    "We can now create our region of interest. Region of interested was created with [geojson.io](https://geojson.io) and we chose Prague for this case."
    ]
   },
   {
@@ -184,30 +181,10 @@
     "for i in range(len(coor)):\n",
     "    for j in range(len(coor[0])):\n",
     "        cord[k] = coor[i][j]\n",
-    "        k += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5b8e2fb6-c8ac-49c4-9e6f-976568be864d",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "polyline_pol_clip = folium.PolyLine(reverse_coordinates(cord), popup=\"cord\",color=\"red\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1961b77-9fb1-44fb-8f8e-80dcea6322be",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "        k += 1\n",
+    "\n",
+    "polyline_pol_clip = folium.PolyLine(reverse_coordinates(cord), popup=\"cord\",color=\"red\")\n",
+    "\n",
     "mean_lat = (bounds_trans_original[1] + bounds_trans_original[3]) / 2.0\n",
     "mean_lng = (bounds_trans_original[0] + bounds_trans_original[2]) / 2.0\n",
     "map_bb = folium.Map(location=[mean_lat-0.2,mean_lng+1.5], zoom_start=8)\n",
@@ -234,20 +211,10 @@
    "outputs": [],
    "source": [
     "from bbox_converter import bbox_converter\n",
-    "geo_bbox = path + \"/geojson/bbox_map_convert.geojson\"\n",
-    "bbox_converter(gejson_file,geo_bbox,32633)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7a0d239e-2d47-4de5-924e-144ab0739950",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
     "import geopandas as gpd\n",
+    "\n",
+    "geo_bbox = path + \"/geojson/bbox_map_convert.geojson\"\n",
+    "bbox_converter(gejson_file,geo_bbox,32633)\n",
     "gdf = gpd.read_file(geo_bbox)"
    ]
   },
@@ -262,7 +229,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# This takes quite a long time to execute\n",
-    "fig, ax = plt.subplots(figsize=(12, 10))\n",
+    "fig, ax = plt.subplots(figsize=(10, 8))\n",
     "show(tci,ax=ax)\n",
     "gdf.plot(ax=ax, color='red', alpha=.4, aspect=1)\n",
     "plt.show()"
@@ -291,16 +258,8 @@
     "from rasterio import windows\n",
     "from matplotlib import pyplot as plt\n",
     "from image_clip import clipper\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e8cd438e-945d-455b-b0a4-3bfca09d7a6d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import os\n",
+    "\n",
     "# Choose folder for clipped images\n",
     "path_folder = path + \"/images/clipped/\""
    ]
@@ -324,8 +283,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Clipping images\n",
     "clip = path_folder + \"TCI.tif\"\n",
-    "plt.figure(figsize=(15,10))\n",
+    "plt.figure(figsize=(10,8))\n",
     "clipped_img = rasterio.open(clip)\n",
     "show(clipped_img)"
    ]
@@ -333,53 +293,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31a5fd21-6fa0-4769-a9d7-ca8b7dea1b5e",
+   "id": "04b3832a-ede6-454d-84b1-d0000bdc06d8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read img and convert to numpy stack\n",
-    "img = np.stack([clipped_img.read(i) for i in range(1,4)], axis=-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ae26017d-71e1-4903-b47f-4750c2d9dfa5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "img = np.stack([clipped_img.read(i) for i in range(1,4)], axis=-1)\n",
+    "\n",
     "bbox = pol_to_bounding_box(cord)\n",
     "bounds_trans = warp.transform_bounds({'init': 'epsg:4326'},clipped_img.crs,*bbox)\n",
     "pol_bounds_trans = generate_polygon(bounds_trans)\n",
     "\n",
     "bbox = pol_to_bounding_box(pol_bounds_trans)\n",
     "window_same = windows.from_bounds(*bbox,clipped_img.transform)\n",
-    "transform_window = windows.transform(window_same,clipped_img.transform)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "590db452-e5ae-4313-ade5-afe216337588",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "transform_window = windows.transform(window_same,clipped_img.transform)\n",
+    "\n",
     "transform,width,height = warp.calculate_default_transform(clipped_img.crs, {\"init\":\"epsg:4326\"},\n",
     "                                                          img.shape[1],img.shape[0],\n",
     "                                                          left=bbox[0],bottom=bbox[1],\n",
     "                                                          right=bbox[2],top=bbox[3])\n",
     "                                                          #resolution=0.002)\n",
     "\n",
-    "out_array = np.ndarray((img.shape[2],height,width),dtype=img.dtype)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bbb18a65-308b-483f-9e92-316d5db0a863",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "out_array = np.ndarray((img.shape[2],height,width),dtype=img.dtype)\n",
+    "\n",
     "warp.reproject(np.transpose(img,axes=(2,0,1)),\n",
     "               out_array,\n",
     "               src_crs=clipped_img.crs,\n",
@@ -389,16 +325,8 @@
     "               resampling=warp.Resampling.bilinear);\n",
     "\n",
     "#plt.figure(figsize=(8,8))\n",
-    "#plot.show(out_array, transform=transform)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5bf53fa4-ed76-4528-91e6-62e7b2b06a7e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#plot.show(out_array, transform=transform)\n",
+    "\n",
     "bbox_clip = pol_to_bounding_box(cord)\n",
     "\n",
     "mean_lat = (bounds_trans_original[1] + bounds_trans_original[3]) / 2.0\n",
