--- a/3-C-SCALE_Image_Analysis.ipynb
+++ b/3-C-SCALE_Image_Analysis.ipynb
@@ -23,18 +23,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from image_functions import *\n",
-    "from matplotlib import pyplot as plt\n",
+    "import os\n",
     "import numpy as np\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a1a526ad-5926-41a0-8e54-9103b1518e5f",
-   "metadata": {},
-   "source": [
-    "Here one can choose three Sentinel bands and combine them in \"RGB\" image. Depending on position of each band in RGB image results in different color of the overall image."
+    "from matplotlib import pyplot as plt\n",
+    "from cscale_notebooks_functions import load_sentinel_image, display_rgb, image_rgb, normalized_difference, plot_masked_rgb, resampling"
    ]
   },
   {
@@ -202,16 +194,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9583813-9469-498f-8f0c-2216e5bcca04",
+   "id": "1bd64189-a70f-48ae-b93d-332403ded5be",
    "metadata": {},
    "outputs": [],
    "source": [
-    "water_mask = mndwi > 0.1\n",
+    "import ipywidgets as widgets\n",
+    "from ipywidgets import interact\n",
     "\n",
-    "plt.figure(figsize=(10,10))\n",
-    "plt.imshow(water_mask)\n",
-    "plt.axis(\"off\")\n",
-    "plt.show()"
+    "def watermask(treshold):\n",
+    "    water_mask = mndwi > treshold\n",
+    "    \n",
+    "    plt.figure(figsize=(10,10))\n",
+    "    plt.imshow(water_mask)\n",
+    "    plt.axis(\"off\")\n",
+    "    plt.show()\n",
+    "\n",
+    "interact(watermask, treshold = (-1.0,1.0,0.01))"
    ]
   },
   {
@@ -233,7 +231,7 @@
     "                             mask=mask,\n",
     "                             color_mask=(0, 0.6, 1),\n",
     "                             transparency=0.0,\n",
-    "                             brightness=5.5\n",
+    "                             brightness=4\n",
     "                            )\n",
     "\n",
     "plt.figure(figsize=(15, 10))\n",
@@ -273,46 +271,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb4415d3-45bc-4aae-9bb0-5accb7d43b86",
-   "metadata": {},
-   "source": [
-    "Here is the same image (same bands) but in different order creating different colour labelling of the same areas.\n",
-    "\n",
-    "Choosing different bands and their order, we can distinguish different areas in satellite images."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "636782fa-ff22-4135-b445-347417d2fb8d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img = load_sentinel_image(folder_img, [\"B03\", \"B04\", \"B09_res\"])\n",
-    "display_rgb(img, 'B04', 'B03', 'B09_res', alpha=8.,figsize=(15, 10))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1a328f10-9738-4e0c-99a0-642b91ca1618",
-   "metadata": {},
-   "source": [
-    "NOTE: L1C data - B11_res and B08, L2A data - B8A."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b25358cc-123a-4d58-a980-b5d3f2cde6c1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img = load_sentinel_image(folder_img, [\"B04\", \"B08\", \"B11_res\"])\n",
-    "display_rgb(img, 'B04', 'B08', 'B11_res', alpha=7.,figsize=(15, 10))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "71646a8f-7204-4246-9883-34dd9ed2ff6c",
    "metadata": {},
    "source": [
@@ -322,24 +280,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f2c2385-6991-445b-9e8f-c0e925df4392",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from coordinates_converter import coor_converter\n",
-    "coor_converter(\"geojson/prague_cut.geojson\",\"geojson/prague_GPScut.geojson\",32633)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "d104e04b-bdca-4dfa-853a-1ef5697f6c97",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
     "import rasterio\n",
     "from rasterio.plot import show\n",
+    "from coordinates_converter import coor_converter\n",
+    "\n",
+    "coor_converter(\"geojson/prague.geojson\",\"geojson/prague_GPScut.geojson\",32633)\n",
     "\n",
     "Prague_reg = \"geojson/prague_GPScut.geojson\"\n",
     "\n",
@@ -357,7 +309,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "fig, ax = plt.subplots(figsize=(12, 10))\n",
+    "fig, ax = plt.subplots(figsize=(10, 7))\n",
     "show(rgb_tci,ax=ax)\n",
     "gdf.plot(ax=ax, color='yellow', alpha=.3, aspect=1)\n",
     "plt.axis(\"off\")\n",
@@ -406,8 +358,8 @@
    "source": [
     "img = load_sentinel_image(roicut_path, [\"B03\", \"B04\", \"B09_res\"])\n",
     "img1 = load_sentinel_image(roicut_path, [\"B03\", \"B04\", \"B09_res\"])\n",
-    "rgb = image_rgb(img, 'B03', 'B04', 'B09_res', alpha=7.5)\n",
-    "bgr = image_rgb(img1, 'B04', 'B09_res', 'B03', alpha=8.5)\n",
+    "rgb = image_rgb(img, 'B03', 'B04', 'B09_res', alpha=5.5)\n",
+    "bgr = image_rgb(img1, 'B04', 'B09_res', 'B03', alpha=5.5)\n",
     "\n",
     "fig, ax = plt.subplots(1, 2, figsize=(25, 20))\n",
     "ax[0].imshow((rgb* 255).astype(np.uint8))\n",
@@ -428,13 +380,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37105ac0-cc30-4a2f-b5cc-1168a994b4d7",
+   "id": "d1c35693-e4a0-4aa0-b2b5-86c90cf83664",
    "metadata": {},
    "outputs": [],
    "source": [
-    "diff = normalized_difference(img1, 'B04', 'B09_res')\n",
+    "diff = normalized_difference(img,'B09_res','B03',)\n",
     "\n",
-    "plt.figure(figsize=(10,10))\n",
+    "plt.figure(figsize=(5,5))\n",
     "plt.imshow(diff, cmap = 'Greens_r')\n",
     "plt.axis(\"off\")\n",
     "plt.show()"
@@ -451,19 +403,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67eda40c-e7e6-489c-a1f2-f62ece0d2c80",
+   "id": "84b53a5a-72d5-4816-baec-b17f75fa0e47",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask1 = diff < -0.05\n",
-    "mask2 = diff < 0.0\n",
+    "import ipywidgets as widgets\n",
+    "from ipywidgets import interactive\n",
     "\n",
-    "fig, ax = plt.subplots(1, 2, figsize=(25, 20))\n",
-    "ax[0].imshow(mask1)\n",
-    "ax[0].axis('off')\n",
-    "ax[1].imshow(mask2)\n",
-    "ax[1].axis('off')\n",
-    "plt.show()"
+    "def greenmask(treshold):\n",
+    "    green_mask = diff > treshold\n",
+    "    \n",
+    "    plt.figure(figsize=(10,10))\n",
+    "    plt.imshow(green_mask)\n",
+    "    plt.axis(\"off\")\n",
+    "    plt.show()\n",
+    "    return green_mask\n",
+    "\n",
+    "gm = interactive(greenmask, treshold = (-1.0,1.0,0.01))\n",
+    "display(gm)"
    ]
   },
   {
@@ -490,7 +447,7 @@
    "outputs": [],
    "source": [
     "img_crgb = load_sentinel_image(roicut_path, [\"B02\", \"B03\", \"B04\"])\n",
-    "mask = mask2\n",
+    "mask = gm.result\n",
     "shape = img_crgb['B02'].shape\n",
     "mask = mask[:shape[0], :shape[1]]\n",
     "\n",
@@ -502,10 +459,10 @@
     "                             mask=mask,\n",
     "                             color_mask=(0.3, 0.7, 0),\n",
     "                             transparency=0.1,\n",
-    "                             brightness=7\n",
+    "                             brightness=4\n",
     "                            )\n",
     "\n",
-    "plt.figure(figsize=(15, 10))\n",
+    "plt.figure(figsize=(10, 5))\n",
     "plt.imshow((masked_crgb * 255).astype(np.uint8))\n",
     "plt.axis(\"off\")\n",
     "plt.show()"
@@ -516,13 +473,13 @@
    "id": "962ed3fc-5e74-4bca-b7bf-db89055712ba",
    "metadata": {},
    "source": [
-    "water_mask needs to be adjusted."
+    "Adding water_mask."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26ee2966-8b0d-453d-8d6e-39eec9047f95",
+   "id": "2f875117-547d-4433-9556-104e2fb68338",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,12 +487,17 @@
     "\n",
     "mndwi = normalized_difference(img_nir2, 'B03', 'B08')\n",
     "\n",
-    "water_mask_crgb = mndwi > 0.09\n",
+    "def watermask(treshold):\n",
+    "    water_mask_crgb = mndwi > treshold\n",
+    "    \n",
+    "    plt.figure(figsize=(10,5))\n",
+    "    plt.imshow(water_mask_crgb)\n",
+    "    plt.axis(\"off\")\n",
+    "    plt.show()\n",
+    "    return water_mask_crgb\n",
     "\n",
-    "plt.figure(figsize=(10,10))\n",
-    "plt.imshow(water_mask_crgb)\n",
-    "plt.axis(\"off\")\n",
-    "plt.show()"
+    "wm = interactive(watermask, treshold = (-0.5,0.5,0.01))\n",
+    "display(wm)"
    ]
   },
   {
@@ -545,7 +507,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask = water_mask_crgb\n",
+    "mask = wm.result\n",
     "masked_rgb_trees = masked_crgb\n",
     "shape = masked_rgb_trees[:,:,0].shape\n",
     "mask = mask[:shape[0], :shape[1]]\n",
@@ -556,10 +518,10 @@
     "                             mask=mask,\n",
     "                             color_mask=(0.1, 0.7, 1),\n",
     "                             transparency=0,\n",
-    "                             brightness=6.\n",
+    "                             brightness=4.\n",
     "                            )\n",
     "\n",
-    "plt.figure(figsize=(15, 10))\n",
+    "plt.figure(figsize=(10, 5))\n",
     "plt.imshow((masked_rgb_wt * 255).astype(np.uint8))\n",
     "plt.axis(\"off\")\n",
     "plt.show()"
