notebook and function update

--- a/2-C-SCALE_Image_Processing.ipynb
+++ b/2-C-SCALE_Image_Processing.ipynb
@@ -210,12 +210,20 @@
    },
    "outputs": [],
    "source": [
-    "from bbox_converter import bbox_converter\n",
+    "from cscale_notebooks_functions import bbox_converter\n",
     "import geopandas as gpd\n",
     "\n",
     "geo_bbox = path + \"/geojson/bbox_map_convert.geojson\"\n",
     "bbox_converter(gejson_file,geo_bbox,32633)\n",
     "gdf = gpd.read_file(geo_bbox)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f81ced6-2ba2-40e1-b141-46eb01defe67",
+   "metadata": {},
+   "source": [
+    "This takes about 4 min to execute!"
    ]
   },
   {
@@ -257,7 +265,7 @@
     "from rasterio.plot import show\n",
     "from rasterio import windows\n",
     "from matplotlib import pyplot as plt\n",
-    "from image_clip import clipper\n",
+    "from cscale_notebooks_functions import clipper\n",
     "import os\n",
     "\n",
     "# Choose folder for clipped images\n",
