--- a/3-C-SCALE_Image_Analysis.ipynb
+++ b/3-C-SCALE_Image_Analysis.ipynb
@@ -557,20 +557,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cd16ffd-e1fc-41cd-9259-7f71b855537c",
+   "id": "e2ed0be0-ac82-4278-9cf5-74c9bba76827",
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = plt.imread(image_filename)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f4f5ea6-d556-4cc5-896b-690780edc8ed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "img = plt.imread(image_filename)\n",
     "plt.imshow(img)"
    ]
   },
